bk_ida/gccida/g2/simplify_plus_minus
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2260:27: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_plus_minus( rtx_code code, machine_mode mode, rtx op0, rtx op1, int force) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2260:42: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_plus_minus( rtx_code code, machine_mode mode, rtx op0, rtx op1, int force) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2266:1: error: use of undeclared identifier '_OWORD'
_OWORD *v10; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2266:9: error: use of undeclared identifier 'v10'
_OWORD *v10; // rbx 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2282:1: error: use of undeclared identifier '_OWORD'
_OWORD *v27; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2282:9: error: use of undeclared identifier 'v27'
_OWORD *v27; // rax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2284:1: error: use of undeclared identifier '_OWORD'
_OWORD *v29; // r14 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2284:9: error: use of undeclared identifier 'v29'
_OWORD *v29; // r14 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2285:1: error: use of undeclared identifier '_OWORD'
_OWORD *v30; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2285:9: error: use of undeclared identifier 'v30'; did you mean 'v20'?
_OWORD *v30; // rbx 
        ^~~
        v20
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2276:18: note: 'v20' declared here
unsigned __int64 v20; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2286:1: error: use of undeclared identifier '_OWORD'
_OWORD *v31; // r15 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2286:9: error: use of undeclared identifier 'v31'
_OWORD *v31; // r15 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2293:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v38; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2303:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2303:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2310:1: error: use of undeclared identifier '_OWORD'
_OWORD *v55; // rbp 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2310:9: error: use of undeclared identifier 'v55'
_OWORD *v55; // rbp 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2316:1: error: use of undeclared identifier '_OWORD'
_OWORD *v61; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/simplify-rtx.c:2316:9: error: use of undeclared identifier 'v61'
_OWORD *v61; // rax 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_plus_minus/src/obj/simplify-rtx.o] Error 1
